--- a/src/main/resources/css/principal_mapa_salmao.css
+++ b/src/main/resources/css/principal_mapa_salmao.css
@@ -18,9 +18,9 @@
 
 
 /* tamanho da fonte */
-.clFonteGeral { /* tamanho da fonte (letra) */
+.root { 
     -fx-font		: 12px "Arial";
-	-fx-font-family: "Roboto", "Arial", sans-serif;
+	-fx-font-family	: "Arial", sans-serif;
 }
 
 /* cor background ao chamar o programa */
