--- a/src/main/resources/html/mapas/Principal/css/principal.css
+++ b/src/main/resources/html/mapas/Principal/css/principal.css
@@ -11,14 +11,14 @@ html, body {
 }
 
 .gm-style-iw {
-	left: -50px !important;
+	left: 100px !important;
 }
 
 .gm-style .gm-style-iw {
   background-color: #FFFFFF !important;
-  top: 10 !important;
+  top: 0 !important;
   width: 400px !important;
-  height: 160px !important;
+  height: 250px !important;
   min-height: 200% !important;
   padding-top: 5px;
   display: block !important;
@@ -26,7 +26,7 @@ html, body {
 
 /*style the p tag*/
  .gm-style .gm-style-iw #google-popup p{
-   padding: 10px;
+   padding: 0px;
 }
          
 /*style the arrow*/
@@ -51,6 +51,7 @@ table {
   font-family: arial, sans-serif;
   border-collapse: collapse;
   width: 100%;
+  height: 100px;
   
   position: relative;
   height: 100px;
