--- a/src/main/resources/fxml/principal/TabSubterranea.fxml
+++ b/src/main/resources/fxml/principal/TabSubterranea.fxml
@@ -3,4 +3,4 @@
 <?import javafx.scene.layout.Pane?>
 
 
-<fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="640.0" prefWidth="1030.0" stylesheets="@../../css/principal_mapa_azul.css" type="javafx.scene.layout.Pane" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" />
+<fx:root fx:id="pSubterranea" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="640.0" prefWidth="1030.0" type="javafx.scene.layout.Pane" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" />
