--- a/src/main/resources/fxml/atendimento/Atendimento.fxml
+++ b/src/main/resources/fxml/atendimento/Atendimento.fxml
@@ -9,10 +9,10 @@
    <children>
       <TabPane fx:id="tpAtendimento" layoutY="-3.0" prefHeight="628.0" prefWidth="1140.0" tabClosingPolicy="UNAVAILABLE" tabMinHeight="30.0" tabMinWidth="100.0">
         <tabs>
-         	<Tab fx:id="tpTabDemanda" styleClass="tabPaneClass" text="  Demanda  " />
-          	<Tab fx:id="tpTabEndereco" styleClass="tabPaneClass" text="  Endereco  " />
-          	<Tab fx:id="tpTabInterferencia" styleClass="tabPaneClass" text="Interferencia" />
-          	<Tab fx:id="tpTabUsuario" styleClass="tabPaneClass" text="  Usuário  " />
+         	<Tab fx:id="tpTabDemanda" styleClass="tabPaneClass" text="  DEMANDA  " />
+          	<Tab fx:id="tpTabEndereco" styleClass="tabPaneClass" text="  ENDEREÇO  " />
+          	<Tab fx:id="tpTabInterferencia" styleClass="tabPaneClass" text="INTERFERÊNCIA" />
+          	<Tab fx:id="tpTabUsuario" styleClass="tabPaneClass" text="  USUÁRIO  " />
          </tabs>
          <cursor>
             <Cursor fx:constant="DEFAULT" />
