--- a/src/main/resources/fxml/fiscalizacao/Fiscalizacao.fxml
+++ b/src/main/resources/fxml/fiscalizacao/Fiscalizacao.fxml
@@ -10,12 +10,12 @@
       <TabPane fx:id="tpFiscalizacao" layoutY="-3.0" prefHeight="628.0" prefWidth="1140.0" tabClosingPolicy="UNAVAILABLE" tabMinHeight="30.0" tabMinWidth="100.0">
         <tabs>
         
-          <Tab fx:id="tpTabDemanda" styleClass="tabPaneClass" text="  Demanda  " />
-          <Tab fx:id="tpTabEndereco" styleClass="tabPaneClass" text="  Endereco  " />
-          <Tab fx:id="tpTabInterferencia" styleClass="tabPaneClass" text="Interferencia" />
-          <Tab fx:id="tpTabUsuario" styleClass="tabPaneClass" text="  Usuário  " /> 
-          <Tab fx:id="tpTabVistoria" styleClass="tabPaneClass" text="  Vistoria  " />
-          <Tab fx:id="tpTabAto" styleClass="tabPaneClass" text="    Ato    " />
+         <Tab fx:id="tpTabDemanda" styleClass="tabPaneClass" text="  DEMANDA  " />
+          	<Tab fx:id="tpTabEndereco" styleClass="tabPaneClass" text="  ENDEREÇO  " />
+          	<Tab fx:id="tpTabInterferencia" styleClass="tabPaneClass" text="INTERFERÊNCIA" />
+          	<Tab fx:id="tpTabUsuario" styleClass="tabPaneClass" text="  USUÁRIO  " />
+          <Tab fx:id="tpTabVistoria" styleClass="tabPaneClass" text="  VISTORIA  " />
+          <Tab fx:id="tpTabAto" styleClass="tabPaneClass" text="    ATOS    " />
          
         </tabs>
          <cursor>
