--- a/src/main/resources/fxml/principal/tempParecer.fxml
+++ b/src/main/resources/fxml/principal/tempParecer.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
@@ -8,7 +9,7 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.Pane?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="980.0" stylesheets="@../../css/principal_mapa_azul.css" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="927.0" prefWidth="980.0" stylesheets="@../../css/principal_mapa_azul.css" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Pane layoutX="15.0" layoutY="10.0" prefHeight="60.0" prefWidth="950.0" styleClass="panes">
          <children>
@@ -50,6 +51,28 @@
             <Button fx:id="btnCancelar" layoutX="438.0" layoutY="18.0" mnemonicParsing="false" onAction="#btnCancelarHab" prefHeight="25.0" prefWidth="95.0" text="Cancelar" />
             <TextField fx:id="tfPesquisar" layoutX="543.0" layoutY="18.0" prefHeight="25.0" prefWidth="265.0" />
             <Button fx:id="btnPesquisar" layoutX="818.0" layoutY="18.0" mnemonicParsing="false" onAction="#btnPesquisarHab" prefHeight="25.0" prefWidth="95.0" text="Pesquisar" />
+         </children>
+      </Pane>
+      <Pane layoutX="25.0" layoutY="480.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="410.0" prefWidth="930.0">
+         <children>
+            <Button layoutX="850.0" layoutY="10.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="70.0" text="&lt;&lt;&lt;" />
+            <Label layoutX="10.0" layoutY="60.0" prefHeight="30.0" prefWidth="420.0" text="USUÁRIOS:" />
+            <TableView fx:id="tvLista1" layoutX="10.0" layoutY="100.0" prefHeight="255.0" prefWidth="420.0">
+               <columns>
+                  <TableColumn fx:id="tcNome" prefWidth="250.0" text="Nome" />
+                  <TableColumn fx:id="tcCPFCNPJ" minWidth="0.0" prefWidth="150.0" text="CPF/CNPJ" />
+               </columns>
+            </TableView>
+            <Label layoutX="440.0" layoutY="60.0" prefHeight="30.0" prefWidth="420.0" text="ENDEREÇO:" />
+            <ComboBox layoutX="440.0" layoutY="100.0" prefHeight="30.0" prefWidth="420.0" />
+            <Label layoutX="440.0" layoutY="140.0" prefHeight="30.0" prefWidth="420.0" text="INTERFERÊNCIAS:" />
+            <TableView fx:id="tvListaInt" layoutX="440.0" layoutY="180.0" prefHeight="175.0" prefWidth="420.0">
+               <columns>
+                  <TableColumn fx:id="tcDescEndInt" prefWidth="235.0" text="Tipo de Interferência" />
+                  <TableColumn fx:id="tcIntUH" prefWidth="165.0" text="Situação" />
+               </columns>
+            </TableView>
+            <Button layoutX="680.0" layoutY="365.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="180.0" text="GERAR PARECER" />
          </children>
       </Pane>
    </children>
