--- a/src/main/resources/fxml/principal/tempParecer.fxml
+++ b/src/main/resources/fxml/principal/tempParecer.fxml
@@ -53,11 +53,11 @@
             <Button fx:id="btnPesquisar" layoutX="818.0" layoutY="18.0" mnemonicParsing="false" onAction="#btnPesquisarHab" prefHeight="25.0" prefWidth="95.0" text="Pesquisar" />
          </children>
       </Pane>
-      <Pane layoutX="25.0" layoutY="480.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="350.0" prefWidth="930.0">
+      <Pane layoutX="25.0" layoutY="480.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="431.0" prefWidth="930.0">
          <children>
             <Button layoutX="850.0" layoutY="10.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="70.0" text="&lt;&lt;&lt;" />
             <Label layoutX="14.0" layoutY="41.0" prefHeight="30.0" prefWidth="420.0" text="USUÁRIOS:" />
-            <TableView fx:id="tvLista1" layoutX="14.0" layoutY="71.0" prefHeight="222.0" prefWidth="420.0">
+            <TableView fx:id="tvLista1" layoutX="14.0" layoutY="71.0" prefHeight="300.0" prefWidth="420.0">
                <columns>
                   <TableColumn fx:id="tcNome" prefWidth="250.0" text="Nome" />
                   <TableColumn fx:id="tcCPFCNPJ" minWidth="0.0" prefWidth="150.0" text="CPF/CNPJ" />
@@ -65,17 +65,20 @@
             </TableView>
             <Label layoutX="444.0" layoutY="41.0" prefHeight="30.0" prefWidth="400.0" text="ENDEREÇO:" />
             <ComboBox layoutX="444.0" layoutY="71.0" prefHeight="30.0" prefWidth="400.0" />
-            <TableView fx:id="tvLista11" layoutX="444.0" layoutY="112.0" prefHeight="117.0" prefWidth="400.0">
+            <Label layoutX="444.0" layoutY="101.0" prefHeight="30.0" prefWidth="400.0" text="DOCUMENTOS:" />
+            <ComboBox layoutX="444.0" layoutY="131.0" prefHeight="30.0" prefWidth="400.0" />
+            <Label layoutX="444.0" layoutY="161.0" prefHeight="30.0" prefWidth="400.0" text="INTERFERÊNCIAS:" />
+            <TableView fx:id="tvLista11" layoutX="444.0" layoutY="191.0" prefHeight="120.0" prefWidth="400.0">
                <columns>
                   <TableColumn fx:id="tcNome1" prefWidth="200.0" text="Tipo" />
                   <TableColumn fx:id="tcCPFCNPJ1" minWidth="0.0" prefWidth="180.0" text="Situação" />
                </columns>
             </TableView>
-            <Label layoutX="444.0" layoutY="230.0" prefHeight="30.0" prefWidth="400.0" text="MODELOS:" />
-            <ComboBox layoutX="444.0" layoutY="260.0" prefHeight="30.0" prefWidth="400.0" />
-            <Button layoutX="850.0" layoutY="141.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="70.0" text="limpar" />
-            <Button layoutX="850.0" layoutY="176.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="70.0" text="remover" />
-            <Button layoutX="14.0" layoutY="306.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="833.0" text="GERAR PARECER" />
+            <Label layoutX="444.0" layoutY="311.0" prefHeight="30.0" prefWidth="400.0" text="MODELOS:" />
+            <ComboBox layoutX="444.0" layoutY="341.0" prefHeight="30.0" prefWidth="400.0" />
+            <Button layoutX="850.0" layoutY="220.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="70.0" text="limpar" />
+            <Button layoutX="850.0" layoutY="255.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="70.0" text="remover" />
+            <Button layoutX="14.0" layoutY="386.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="833.0" text="GERAR PARECER" />
          </children>
       </Pane>
    </children>
