--- a/src/main/resources/fxml/principal/tempInteferencia.fxml
+++ b/src/main/resources/fxml/principal/tempInteferencia.fxml
@@ -75,6 +75,6 @@
          </columns>
       </TableView>
       <Label fx:id="lblDataAtualizacao11" layoutX="730.0" layoutY="530.0" prefHeight="22.0" prefWidth="247.0" />
-      <Pane fx:id="pInterTipo" layoutY="558.0" prefHeight="640.0" prefWidth="1030.0" style="-fx-background-color: #F3F3F3;" />
+      <Pane fx:id="pInterTipo" layoutX="40.0" layoutY="560.0" prefHeight="500.0" prefWidth="950.0" style="-fx-background-color: #F3F3F3;" />
    </children>
 </Pane>
