--- a/src/main/resources/fxml/principal/tempTelaEndereco.fxml
+++ b/src/main/resources/fxml/principal/tempTelaEndereco.fxml
@@ -8,53 +8,57 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.Pane?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="550.0" prefWidth="950.0" stylesheets="@../../css/principal_mapa_azul.css" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1">
+
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1000.0" prefWidth="950.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Pane layoutX="10.0" layoutY="10.0" prefHeight="60.0" prefWidth="930.0" styleClass="panes" stylesheets="@../../css/principal_mapa_azul.css">
+      <Pane layoutX="60.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1000.0" prefWidth="890.0" stylesheets="@../../css/principal_mapa_azul.css">
          <children>
-            <Label alignment="CENTER" layoutX="18.0" layoutY="15.0" prefHeight="30.0" prefWidth="120.0" text="DEMANDA:" />
-            <Label layoutX="138.0" layoutY="15.0" prefHeight="30.0" prefWidth="690.0" />
-            <Button layoutX="838.0" layoutY="19.0" mnemonicParsing="false" prefHeight="20.0" prefWidth="75.0" text="&lt;&lt;&lt;" />
+            <Pane layoutX="25.0" layoutY="14.0" prefHeight="60.0" prefWidth="850.0" styleClass="panes">
+               <children>
+                  <Label layoutX="15.0" layoutY="15.0" prefHeight="30.0" prefWidth="90.0" text="DOCUMENTO:" />
+                  <Label layoutX="110.0" layoutY="15.0" prefHeight="30.0" prefWidth="648.0" />
+                  <Button layoutX="770.0" layoutY="19.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="65.0" text="&lt;&lt;&lt;" />
+               </children>
+            </Pane>
+            <Pane fx:id="pDadosBasicos" layoutX="20.0" layoutY="85.0" prefHeight="125.0" prefWidth="850.0" styleClass="panes">
+               <children>
+                  <Label layoutX="13.0" prefHeight="30.0" prefWidth="330.0" text="Endereço do  Empreendimento: " />
+                  <TextField fx:id="tfEnd" layoutX="13.0" layoutY="30.0" prefHeight="30.0" prefWidth="330.0" />
+                  <Label layoutX="353.0" prefHeight="30.0" prefWidth="160.0" text="Região Administrativa: " />
+                  <ComboBox layoutX="353.0" layoutY="30.0" prefHeight="30.0" prefWidth="160.0" />
+                  <Label layoutX="523.0" prefHeight="30.0" prefWidth="100.0" text="Cep: " />
+                  <TextField fx:id="tfEndCep" layoutX="523.0" layoutY="30.0" prefHeight="30.0" prefWidth="100.0" />
+                  <Label layoutX="633.0" prefHeight="30.0" prefWidth="90.0" text="Cidade: " />
+                  <TextField fx:id="tfEndCid" layoutX="633.0" layoutY="30.0" prefHeight="30.0" prefWidth="90.0" />
+                  <Label layoutX="733.0" prefHeight="30.0" prefWidth="100.0" text="UF: " />
+                  <ComboBox layoutX="733.0" layoutY="30.0" prefHeight="30.0" prefWidth="100.0" />
+                  <Label layoutX="158.0" layoutY="76.0" prefHeight="30.0" prefWidth="100.0" text="Latitude (Y): " />
+                  <TextField fx:id="tfEndLat" layoutX="258.0" layoutY="76.0" prefHeight="30.0" prefWidth="140.0" promptText="-15.7754084" />
+                  <Label layoutX="413.0" layoutY="76.0" prefHeight="30.0" prefWidth="100.0" text="Longitude (X): " />
+                  <TextField fx:id="tfEndLon" layoutX="513.0" layoutY="76.0" prefHeight="30.0" prefWidth="140.0" promptText="-47.9411395" />
+                  <Button fx:id="btnEndMaps" layoutX="668.0" layoutY="79.0" mnemonicParsing="false" onAction="#btnEndMapsHab" prefHeight="25.0" prefWidth="25.0" />
+               </children>
+            </Pane>
+            <Pane fx:id="pPersistencia" layoutX="20.0" layoutY="225.0" prefHeight="60.0" prefWidth="850.0" styleClass="panes">
+               <children>
+                  <Button fx:id="btnNovo" layoutX="15.0" layoutY="18.0" mnemonicParsing="false" onAction="#btnNovoHab" prefHeight="25.0" prefWidth="95.0" text="Novo" />
+                  <Button fx:id="btnSalvar" layoutX="120.0" layoutY="18.0" mnemonicParsing="false" onAction="#btnSalvarHab" prefHeight="25.0" prefWidth="95.0" text="Salvar" />
+                  <Button fx:id="btnEditar" layoutX="225.0" layoutY="18.0" mnemonicParsing="false" onAction="#btnEditarHab" prefHeight="25.0" prefWidth="95.0" text="Editar" />
+                  <Button fx:id="btnExcluir" layoutX="330.0" layoutY="18.0" mnemonicParsing="false" onAction="#btnExcluirHab" prefHeight="25.0" prefWidth="95.0" text="Excluir" />
+                  <Button fx:id="btnCancelar" layoutX="435.0" layoutY="18.0" mnemonicParsing="false" onAction="#btnCancelarHab" prefHeight="25.0" prefWidth="95.0" text="Cancelar" />
+                  <TextField fx:id="tfPesquisar" layoutX="540.0" layoutY="18.0" prefHeight="25.0" prefWidth="190.0" />
+                  <Button fx:id="btnPesquisar" layoutX="740.0" layoutY="18.0" mnemonicParsing="false" onAction="#btnPesquisarHab" prefHeight="25.0" prefWidth="95.0" text="Pesquisar" />
+               </children>
+            </Pane>
+            <TableView fx:id="tvLista" layoutX="25.0" layoutY="300.0" prefHeight="185.0" prefWidth="840.0">
+               <columns>
+                  <TableColumn fx:id="tcDesEnd" prefWidth="375.0" text="Endereço" />
+                  <TableColumn fx:id="tcEndRA" minWidth="0.0" prefWidth="220.0" text="RA" />
+                  <TableColumn fx:id="tcEndCid" prefWidth="220.0" text="CEP" />
+               </columns>
+            </TableView>
+            <Label fx:id="lblDataAtualizacao11" layoutX="615.0" layoutY="495.0" prefHeight="22.0" prefWidth="247.0" />
          </children>
       </Pane>
-      <Pane fx:id="pPersistencia" layoutX="25.0" layoutY="225.0" prefHeight="60.0" prefWidth="900.0" styleClass="panes">
-         <children>
-            <Button fx:id="btnNovo" layoutX="13.0" layoutY="18.0" mnemonicParsing="false" onAction="#btnNovoHab" prefHeight="25.0" prefWidth="95.0" text="Novo" />
-            <Button fx:id="btnSalvar" layoutX="118.0" layoutY="18.0" mnemonicParsing="false" onAction="#btnSalvarHab" prefHeight="25.0" prefWidth="95.0" text="Salvar" />
-            <Button fx:id="btnEditar" layoutX="223.0" layoutY="18.0" mnemonicParsing="false" onAction="#btnEditarHab" prefHeight="25.0" prefWidth="95.0" text="Editar" />
-            <Button fx:id="btnExcluir" layoutX="328.0" layoutY="18.0" mnemonicParsing="false" onAction="#btnExcluirHab" prefHeight="25.0" prefWidth="95.0" text="Excluir" />
-            <Button fx:id="btnCancelar" layoutX="433.0" layoutY="18.0" mnemonicParsing="false" onAction="#btnCancelarHab" prefHeight="25.0" prefWidth="95.0" text="Cancelar" />
-            <Button fx:id="btnPesquisar" layoutX="793.0" layoutY="18.0" mnemonicParsing="false" onAction="#btnPesquisarHab" prefHeight="25.0" prefWidth="95.0" text="Pesquisar" />
-            <TextField fx:id="tfPesquisar" layoutX="538.0" layoutY="18.0" prefHeight="25.0" prefWidth="245.0" />
-         </children>
-      </Pane>
-      <TableView fx:id="tvLista" layoutX="25.0" layoutY="305.0" prefHeight="185.0" prefWidth="900.0">
-         <columns>
-            <TableColumn fx:id="tcDesEnd" prefWidth="409.0" text="Endereço" />
-            <TableColumn fx:id="tcEndRA" minWidth="0.0" prefWidth="232.0" text="RA" />
-            <TableColumn fx:id="tcEndCid" prefWidth="232.0" text="CEP" />
-         </columns>
-      </TableView>
-      <Pane fx:id="pDadosBasicos" layoutX="25.0" layoutY="83.0" prefHeight="130.0" prefWidth="900.0" styleClass="panes">
-         <children>
-            <Label layoutX="18.0" prefHeight="30.0" prefWidth="380.0" text="Endereço do  Empreendimento: " />
-            <TextField fx:id="tfEnd" layoutX="18.0" layoutY="30.0" prefHeight="30.0" prefWidth="370.0" />
-            <Label layoutX="398.0" prefHeight="30.0" prefWidth="160.0" text="Região Administrativa: " />
-            <ComboBox layoutX="398.0" layoutY="30.0" prefHeight="30.0" prefWidth="160.0" />
-            <Label layoutX="568.0" prefHeight="30.0" prefWidth="100.0" text="Cep: " />
-            <TextField fx:id="tfEndCep" layoutX="568.0" layoutY="30.0" prefHeight="30.0" prefWidth="100.0" />
-            <Label layoutX="680.0" prefHeight="30.0" prefWidth="90.0" text="Cidade: " />
-            <TextField fx:id="tfEndCid" layoutX="680.0" layoutY="30.0" prefHeight="30.0" prefWidth="90.0" />
-            <Label layoutX="782.0" prefHeight="30.0" prefWidth="100.0" text="UF: " />
-            <ComboBox layoutX="782.0" layoutY="30.0" prefHeight="30.0" prefWidth="100.0" />
-            <Label layoutX="183.0" layoutY="79.0" prefHeight="30.0" prefWidth="100.0" text="Latitude (Y): " />
-            <TextField fx:id="tfEndLat" layoutX="283.0" layoutY="79.0" prefHeight="30.0" prefWidth="140.0" promptText="-15.7754084" />
-            <Label layoutX="438.0" layoutY="79.0" prefHeight="30.0" prefWidth="100.0" text="Longitude (X): " />
-            <TextField fx:id="tfEndLon" layoutX="538.0" layoutY="79.0" prefHeight="30.0" prefWidth="140.0" promptText="-47.9411395" />
-            <Button fx:id="btnEndMaps" layoutX="693.0" layoutY="82.0" mnemonicParsing="false" onAction="#btnEndMapsHab" prefHeight="25.0" prefWidth="25.0" />
-         </children>
-      </Pane>
-      <Label fx:id="lblDataAtualizacao1" layoutX="677.0" layoutY="508.0" prefHeight="22.0" prefWidth="247.0" />
-      <Label fx:id="lblDataAtualizacao11" layoutX="677.0" layoutY="500.0" prefHeight="22.0" prefWidth="247.0" />
    </children>
 </Pane>
