--- a/src/main/resources/fxml/principal/tempTelaProcesso.fxml
+++ b/src/main/resources/fxml/principal/tempTelaProcesso.fxml
@@ -9,52 +9,56 @@
 <?import javafx.scene.layout.Pane?>
 
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="669.0" prefWidth="950.0" stylesheets="@../../css/principal_mapa_azul.css" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1000.0" prefWidth="950.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Pane layoutX="10.0" layoutY="10.0" prefHeight="60.0" prefWidth="930.0" styleClass="panes">
+      <Pane layoutX="60.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1000.0" prefWidth="890.0" stylesheets="@../../css/principal_mapa_azul.css">
          <children>
-            <Label layoutX="25.0" layoutY="15.0" prefHeight="30.0" prefWidth="100.0" text="DOCUMENTO" />
-            <Label layoutX="115.0" layoutY="15.0" prefHeight="30.0" prefWidth="720.0" />
-            <Button layoutX="845.0" layoutY="18.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="60.0" text="&lt;&lt;&lt;" />
+            <Pane layoutX="20.0" layoutY="14.0" prefHeight="60.0" prefWidth="850.0" styleClass="panes">
+               <children>
+                  <Label layoutX="15.0" layoutY="15.0" prefHeight="30.0" prefWidth="90.0" text="ENDERECO:" />
+                  <Label layoutX="110.0" layoutY="15.0" prefHeight="30.0" prefWidth="648.0" />
+                  <Button layoutX="770.0" layoutY="19.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="65.0" text="&lt;&lt;&lt;" />
+               </children>
+            </Pane>
+            <Pane fx:id="pDadosDemanda" layoutX="20.0" layoutY="85.0" prefHeight="60.0" prefWidth="850.0" styleClass="panes">
+               <children>
+                  <Label layoutX="10.0" layoutY="15.0" prefHeight="30.0" prefWidth="85.0" text="PROCESSO:" />
+                  <TextField layoutX="95.0" layoutY="15.0" prefHeight="30.0" prefWidth="130.0" promptText="15/2015" />
+                  <Label layoutX="235.0" layoutY="15.0" prefHeight="30.0" prefWidth="130.0" text="DATA DE CRIAÇÃO:" />
+                  <DatePicker layoutX="365.0" layoutY="15.0" prefHeight="30.0" prefWidth="120.0" promptText="12/08/2015" />
+                  <Label layoutX="495.0" layoutY="15.0" prefHeight="30.0" prefWidth="100.0" text="INTERESSADO:" />
+                  <TextField layoutX="605.0" layoutY="15.0" prefHeight="30.0" prefWidth="235.0" promptText="197.555.666/2015" />
+               </children>
+            </Pane>
+            <Pane fx:id="pPersistencia" layoutX="20.0" layoutY="154.0" prefHeight="60.0" prefWidth="850.0" styleClass="panes">
+               <children>
+                  <Button fx:id="btnNovo" layoutX="15.0" layoutY="18.0" mnemonicParsing="false" onAction="#btnNovoHab" prefHeight="25.0" prefWidth="95.0" text="Novo" />
+                  <Button fx:id="btnSalvar" layoutX="120.0" layoutY="18.0" mnemonicParsing="false" onAction="#btnSalvarHab" prefHeight="25.0" prefWidth="95.0" text="Salvar" />
+                  <Button fx:id="btnEditar" layoutX="225.0" layoutY="18.0" mnemonicParsing="false" onAction="#btnEditarHab" prefHeight="25.0" prefWidth="95.0" text="Editar" />
+                  <Button fx:id="btnExcluir" layoutX="330.0" layoutY="18.0" mnemonicParsing="false" onAction="#btnExcluirHab" prefHeight="25.0" prefWidth="95.0" text="Excluir" />
+                  <Button fx:id="btnCancelar" layoutX="435.0" layoutY="18.0" mnemonicParsing="false" onAction="#btnCancelarHab" prefHeight="25.0" prefWidth="95.0" text="Cancelar" />
+                  <TextField fx:id="tfPesquisar" layoutX="540.0" layoutY="18.0" prefHeight="25.0" prefWidth="190.0" />
+                  <Button fx:id="btnPesquisar" layoutX="740.0" layoutY="18.0" mnemonicParsing="false" onAction="#btnPesquisarHab" prefHeight="25.0" prefWidth="95.0" text="Pesquisar" />
+               </children>
+            </Pane>
+            <TableView fx:id="tvLista" layoutX="25.0" layoutY="229.0" prefHeight="185.0" prefWidth="840.0">
+               <columns>
+                  <TableColumn fx:id="tcDesEnd" prefWidth="230.0" text="Processo" />
+                  <TableColumn fx:id="tcEndRA" minWidth="0.0" prefWidth="221.0" text="Data de Criação" />
+                  <TableColumn fx:id="tcEndCid" prefWidth="370.0" text="Interessado" />
+               </columns>
+            </TableView>
+            <Label fx:id="lblDataAtualizacao1" layoutX="692.0" layoutY="425.0" prefHeight="22.0" prefWidth="247.0" />
+            <Label fx:id="lblDataAtualizacao11" layoutX="615.0" layoutY="425.0" prefHeight="22.0" prefWidth="247.0" />
+            <TableView fx:id="tvLista1" layoutX="20.0" layoutY="460.0" prefHeight="185.0" prefWidth="840.0">
+               <columns>
+                  <TableColumn fx:id="tcDesEnd1" prefWidth="200.0" text="Tipo" />
+                  <TableColumn fx:id="tcEndRA1" minWidth="0.0" prefWidth="180.0" text="Número" />
+                  <TableColumn fx:id="tcEndCid1" prefWidth="180.0" text="SEI" />
+                  <TableColumn fx:id="tcEndCid11" prefWidth="260.0" text="Processo" />
+               </columns>
+            </TableView>
          </children>
       </Pane>
-      <Pane fx:id="pPersistencia" layoutX="7.0" layoutY="153.0" prefHeight="60.0" prefWidth="930.0" styleClass="panes">
-         <children>
-            <Button fx:id="btnNovo" layoutX="18.0" layoutY="18.0" mnemonicParsing="false" onAction="#btnNovoHab" prefHeight="25.0" prefWidth="95.0" text="Novo" />
-            <Button fx:id="btnSalvar" layoutX="123.0" layoutY="18.0" mnemonicParsing="false" onAction="#btnSalvarHab" prefHeight="25.0" prefWidth="95.0" text="Salvar" />
-            <Button fx:id="btnEditar" layoutX="228.0" layoutY="18.0" mnemonicParsing="false" onAction="#btnEditarHab" prefHeight="25.0" prefWidth="95.0" text="Editar" />
-            <Button fx:id="btnExcluir" layoutX="333.0" layoutY="18.0" mnemonicParsing="false" onAction="#btnExcluirHab" prefHeight="25.0" prefWidth="95.0" text="Excluir" />
-            <Button fx:id="btnCancelar" layoutX="438.0" layoutY="18.0" mnemonicParsing="false" onAction="#btnCancelarHab" prefHeight="25.0" prefWidth="95.0" text="Cancelar" />
-            <TextField fx:id="tfPesquisar" layoutX="543.0" layoutY="18.0" prefHeight="25.0" prefWidth="265.0" />
-            <Button fx:id="btnPesquisar" layoutX="818.0" layoutY="18.0" mnemonicParsing="false" onAction="#btnPesquisarHab" prefHeight="25.0" prefWidth="95.0" text="Pesquisar" />
-         </children>
-      </Pane>
-      <TableView fx:id="tvLista" layoutX="10.0" layoutY="229.0" prefHeight="185.0" prefWidth="930.0">
-         <columns>
-            <TableColumn fx:id="tcDesEnd" prefWidth="250.0" text="Processo" />
-            <TableColumn fx:id="tcEndRA" minWidth="0.0" prefWidth="250.0" text="Data de Criação" />
-            <TableColumn fx:id="tcEndCid" prefWidth="410.0" text="Interessado" />
-         </columns>
-      </TableView>
-      <Label fx:id="lblDataAtualizacao1" layoutX="692.0" layoutY="425.0" prefHeight="22.0" prefWidth="247.0" />
-      <Pane fx:id="pDadosDemanda" layoutX="7.0" layoutY="82.0" prefHeight="60.0" prefWidth="930.0" styleClass="panes">
-         <children>
-            <Label layoutX="8.0" layoutY="15.0" prefHeight="30.0" prefWidth="95.0" text="PROCESSO:" />
-            <TextField layoutX="113.0" layoutY="15.0" prefHeight="30.0" prefWidth="130.0" promptText="15/2015" />
-            <Label layoutX="253.0" layoutY="15.0" prefHeight="30.0" prefWidth="130.0" text="DATA DE CRIAÇÃO:" />
-            <DatePicker layoutX="383.0" layoutY="15.0" prefHeight="30.0" prefWidth="140.0" promptText="12/08/2015" />
-            <Label layoutX="533.0" layoutY="15.0" prefHeight="30.0" prefWidth="100.0" text="INTERESSADO:" />
-            <TextField layoutX="643.0" layoutY="15.0" prefHeight="30.0" prefWidth="280.0" promptText="197.555.666/2015" />
-         </children>
-      </Pane>
-      <Label fx:id="lblDataAtualizacao11" layoutX="692.0" layoutY="425.0" prefHeight="22.0" prefWidth="247.0" />
-      <TableView fx:id="tvLista1" layoutX="55.0" layoutY="458.0" prefHeight="185.0" prefWidth="840.0">
-         <columns>
-            <TableColumn fx:id="tcDesEnd1" prefWidth="200.0" text="Tipo" />
-            <TableColumn fx:id="tcEndRA1" minWidth="0.0" prefWidth="200.0" text="Número" />
-            <TableColumn fx:id="tcEndCid1" prefWidth="200.0" text="SEI" />
-            <TableColumn fx:id="tcEndCid11" prefWidth="220.0" text="Processo" />
-         </columns>
-      </TableView>
    </children>
 </Pane>
