--- a/src/main/resources/fxml/principal/tempTelaUsuario.fxml
+++ b/src/main/resources/fxml/principal/tempTelaUsuario.fxml
@@ -20,7 +20,7 @@
                   <Button layoutX="770.0" layoutY="19.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="65.0" text="&lt;&lt;&lt;" />
                </children>
             </Pane>
-            <Pane fx:id="pPersistencia" layoutX="25.0" layoutY="322.0" prefHeight="60.0" prefWidth="840.0" styleClass="panes">
+            <Pane fx:id="pPersistencia" layoutX="25.0" layoutY="399.0" prefHeight="60.0" prefWidth="840.0" styleClass="panes">
                <children>
                   <Button fx:id="btnNovo" layoutX="10.0" layoutY="18.0" mnemonicParsing="false" onAction="#btnNovoHab" prefHeight="25.0" prefWidth="95.0" text="Novo" />
                   <Button fx:id="btnSalvar" layoutX="115.0" layoutY="18.0" mnemonicParsing="false" onAction="#btnSalvarHab" prefHeight="25.0" prefWidth="95.0" text="Salvar" />
@@ -31,22 +31,20 @@
                   <Button fx:id="btnPesquisar" layoutX="735.0" layoutY="18.0" mnemonicParsing="false" onAction="#btnPesquisarHab" prefHeight="25.0" prefWidth="95.0" text="Pesquisar" />
                </children>
             </Pane>
-            <TableView fx:id="tvLista" layoutX="25.0" layoutY="395.0" prefHeight="160.0" prefWidth="840.0">
+            <TableView fx:id="tvLista" layoutX="25.0" layoutY="472.0" prefHeight="160.0" prefWidth="840.0">
                <columns>
                   <TableColumn fx:id="tcNome" prefWidth="340.0" text="Nome" />
                   <TableColumn fx:id="tcCPFCNPJ" minWidth="0.0" prefWidth="150.0" text="CPF/CNPJ" />
                   <TableColumn fx:id="tcEndereco" prefWidth="333.0" text="Endereço de Correspondência" />
                </columns>
             </TableView>
-            <Label fx:id="lblDataAtualizacao11" layoutX="615.0" layoutY="565.0" prefHeight="22.0" prefWidth="247.0" />
-            <Pane fx:id="pDadosBasicos" layoutX="25.0" layoutY="82.0" prefHeight="230.0" prefWidth="840.0" styleClass="panes">
+            <Label fx:id="lblDataAtualizacao11" layoutX="615.0" layoutY="642.0" prefHeight="22.0" prefWidth="247.0" />
+            <Pane fx:id="pDadosBasicos" layoutX="25.0" layoutY="82.0" prefHeight="304.0" prefWidth="840.0" styleClass="panes">
                <children>
                   <Label layoutX="10.0" layoutY="5.0" prefHeight="30.0" prefWidth="110.0" text="TIPO:" />
                   <ComboBox layoutX="10.0" layoutY="35.0" prefHeight="30.0" prefWidth="110.0" />
-                  <Label layoutX="131.0" layoutY="5.0" prefHeight="30.0" prefWidth="490.0" text="NOME/RAZÃO SOCIAL:" />
-                  <TextField fx:id="tfNome" layoutX="130.0" layoutY="35.0" prefHeight="30.0" prefWidth="490.0" />
-                  <Label layoutX="632.0" layoutY="5.0" prefHeight="30.0" prefWidth="195.0" text="CPF/CNPJ: " />
-                  <TextField fx:id="tfCPFCNPJ" layoutX="630.0" layoutY="35.0" prefHeight="30.0" prefWidth="195.0" />
+                  <Label layoutX="10.0" layoutY="215.0" prefHeight="30.0" prefWidth="604.0" text="REPRESENTANTE:" />
+                  <TextField fx:id="tfNome" layoutX="10.0" layoutY="245.0" prefHeight="30.0" prefWidth="665.0" />
                   <CheckBox fx:id="cbEndEmp" layoutX="10.0" layoutY="66.0" mnemonicParsing="false" onAction="#cbEndEmpHab" prefHeight="30.0" prefWidth="370.0" text="importar endereço do empreendimento. " />
                   <Label layoutX="10.0" layoutY="95.0" prefHeight="30.0" prefWidth="370.0" text="ENDERECO:" />
                   <TextField fx:id="tfLogadouro" layoutX="10.0" layoutY="125.0" prefHeight="30.0" prefWidth="370.0" />
@@ -58,12 +56,14 @@
                   <TextField fx:id="tfCidade" layoutX="645.0" layoutY="125.0" prefHeight="30.0" prefWidth="110.0" />
                   <Label layoutX="765.0" layoutY="95.0" prefHeight="30.0" prefWidth="60.0" text="UF: " />
                   <ComboBox layoutX="765.0" layoutY="125.0" prefHeight="30.0" prefWidth="60.0" />
-                  <Label layoutX="10.0" layoutY="155.0" prefHeight="30.0" prefWidth="140.0" text="TELEFONE:" />
-                  <TextField fx:id="tfTelefone" layoutX="9.0" layoutY="185.0" prefHeight="30.0" prefWidth="140.0" />
+                  <Label layoutX="685.0" layoutY="215.0" prefHeight="30.0" prefWidth="140.0" text="TELEFONE:" />
+                  <TextField fx:id="tfTelefone" layoutX="685.0" layoutY="245.0" prefHeight="30.0" prefWidth="140.0" />
                   <Label layoutX="160.0" layoutY="155.0" prefHeight="30.0" prefWidth="140.0" text="CELULAR:" />
                   <TextField fx:id="tfCelular" layoutX="160.0" layoutY="185.0" prefHeight="30.0" prefWidth="140.0" />
                   <Label layoutX="310.0" layoutY="155.0" prefHeight="30.0" prefWidth="515.0" text="EMAIL:" />
                   <TextField fx:id="tfEmail" layoutX="310.0" layoutY="185.0" prefHeight="30.0" prefWidth="515.0" />
+                  <Label layoutX="10.0" layoutY="155.0" prefHeight="30.0" prefWidth="140.0" text="TELEFONE:" />
+                  <TextField fx:id="tfTelefone1" layoutX="10.0" layoutY="185.0" prefHeight="30.0" prefWidth="140.0" />
                </children>
             </Pane>
          </children>
