--- a/src/main/resources/fxml/modelosHTML/ModelosHTML.fxml
+++ b/src/main/resources/fxml/modelosHTML/ModelosHTML.fxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
@@ -34,10 +34,9 @@
             <TableColumn fx:id="tcUnidade" minWidth="0.0" prefWidth="315.0" text="Unidade" />
          </columns>
       </TableView>
-      <Label layoutX="274.0" layoutY="14.0" prefHeight="25.0" prefWidth="56.0" text="Unidade: " />
-      <ChoiceBox fx:id="cbUnidade" layoutX="330.0" layoutY="14.0" prefWidth="150.0" />
-      <Label layoutX="491.0" layoutY="18.0" prefHeight="17.0" prefWidth="76.0" text="Identificação: " />
-      <TextField fx:id="tfIdentificacao" layoutX="568.0" layoutY="15.0" prefHeight="25.0" prefWidth="352.0" />
+      <Label layoutX="601.0" layoutY="14.0" prefHeight="25.0" prefWidth="60.0" text="Unidade: " />
+      <Label layoutX="736.0" layoutY="18.0" prefHeight="17.0" prefWidth="76.0" text="Identificação: " />
+      <TextField fx:id="tfIdentificacao" layoutX="811.0" layoutY="14.0" prefHeight="25.0" prefWidth="280.0" />
       <TabPane fx:id="tabPane" layoutX="139.0" layoutY="222.0" prefHeight="494.0" prefWidth="900.0" tabClosingPolicy="UNAVAILABLE">
         <tabs>
           <Tab fx:id="tabTexto" text="Texto">
@@ -62,5 +61,10 @@
           </Tab>
         </tabs>
       </TabPane>
+      <Label layoutX="86.0" layoutY="14.0" prefHeight="25.0" prefWidth="100.0" text="Tipo Documento:" />
+      <Label layoutX="343.0" layoutY="14.0" prefHeight="25.0" prefWidth="105.0" text="Tipo Interferência" />
+      <ComboBox fx:id="cbTipoDocumento" layoutX="185.0" layoutY="14.0" prefWidth="150.0" />
+      <ComboBox fx:id="cbTipoInterferencia" layoutX="445.0" layoutY="14.0" prefWidth="150.0" />
+      <ComboBox fx:id="cbUnidade" layoutX="655.0" layoutY="14.0" prefHeight="25.0" prefWidth="76.0" />
    </children>
 </fx:root>
